Closed Bug 336186 Opened 20 years ago Closed 20 years ago

nsTypedSelection::GetRootScrollableView can return uninitialized value

Categories

(Core :: Layout, defect)

defect
Not set
minor

Tracking

()

RESOLVED FIXED

People

(Reporter: kherron+mozilla, Unassigned)

References

(Blocks 1 open bug, )

Details

(Keywords: coverity)

Attachments

(1 file)

This was found through a coverity scan of the firefox source. Please refer to the sample URL. |nsTypedSelection::GetRootScrollableView| in layout/generic/nsSelection.cpp can return an uninitialized value. The variable |rv| is declared at line 6168 without an initializer. If the test at line 6171 fails, then execution branches to line 6195, which eventually returns the uninitialize |rv|. It looks like this was introduced by the patch for bug 330305. Formerly, the call to |GetScrollableView| at line 6170 initialize |rv|.
Oops. Sorry about that...
Attachment #220498 - Flags: review?(roc)
checked in.
Status: NEW → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: