Bug 336186. Fix use of uninitialized rv. patch by Marc Liddell, r+sr=roc